criei o rodapé do site

--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -94,5 +94,10 @@
         </section>
     </main>
     <!--Conteudo Principal-->
+    <!--Rodapé-->
+    <footer>
+        <p>Site criado por <a href="https://github.com/bruno-devbr">bruno-devbr</a> para o <a href="https://www.cursoemvideo.com">CursoemVideo</a></p>
+    </footer>
+    <!--Rodapé-->
 </body>
 </html>
