--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -4,14 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe {
+            height: 500px;
+            width: 400px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de iframe</h1>
-    <p>Acessando o site do
-    <iframe src="https://www.cursoemvideo.com" frameborder="0">
+    <p>
+        Acessando o site do
 
-    </iframe>
-    para aprender a programar</p>
-    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe> é muito legal</p>
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" height: 500px;>
+            <a href="https://www.cursoemvideo.com" target="_blank">Curso em Video</a>
+        </iframe>
+
+        para aprender a programar
+    </p>
+    <p>
+        O repositorio do guanabara no
+
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0" width: 400px; >
+            <a href="https://gustavoguanabara.github.io" target="_blank">Github</a>
+        </iframe>
+
+        tambem é bem legal
+    </p>
 </body>
 </html>
