--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iframe</title>
+    <style>
+        iframe {
+            display: block;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
     <h1>Teste com iframe</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi non vitae mollitia ab earum illum provident, nulla cupiditate accusamus cumque tenetur necessitatibus ipsam blanditiis eos aut. Commodi obcaecati deleniti natus!</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador não é compativel</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed culpa hic cumque deleniti corporis iusto dolor quos quo cupiditate. Expedita aut sequi quaerat rem possimus fugit dolor voluptatum explicabo repellat.</p>
 </body>
