--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, magnam tenetur quaerat eum minima aliquid optio amet, culpa, illo consectetur veniam quis distinctio officiis aspernatur dolorum eius sint voluptatem quia? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos at reiciendis molestiae neque doloribus ex ea aut harum alias? Debitis consequatur odit sit sed qui perferendis asperiores facere exercitationem cumque?</p>
     
-    <iframe src="#" name="frame" id="tela">
+    <iframe srcdoc="<h1>Escolha uma das opções acima</h1> <p>adipisicing elit. Impedit, doloremque earum sapiente ipsa molestias assumenda nesciunt asperiores quam dolorem et architecto quia consectetur repellendus voluptate consequatur officiis optio debitis ut Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur reiciendis et deserunt ex quaerat doloribus corrupti! Tempore, accusantium explicabo esse quos rerum accusamus, provident quod magni quis adipisci unde ipsa.</p>" name="frame" id="tela">
         <p>Infelizmente seu navegador não é compativel</p>
     </iframe>
 
